Add tina taxi and public transport tag line

--- a/pages/live.html
+++ b/pages/live.html
@@ -1711,10 +1711,11 @@
         <div class="h2-header-block">
           <h2 class="display-2 text-center pt-4">Public Transit</h2>
           <p class="lead text-center ch-60 pb-4">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
-            corrupti dolore et cum cupiditate, distinctio veniam impedit non.
-            Quam voluptatem nulla, et aliquid magni incidunt dolorem! Sit
-            molestiae perspiciatis quas?
+            The transportation systems of America are critical to our economy,
+            and when properly maintained, allow people to get to jobs, as well
+            as allow businesses to access wider pools of labor, suppliers, and
+            customers. In Mercer County, one will find a wide range of public
+            transportation options, as listed below:
           </p>
         </div>
 
@@ -1783,6 +1784,22 @@
                 class="card-body d-flex align-items-center justify-content-center"
               >
                 <a href="https://newcastletransit.org/" class="card-link"
+                  >Website</a
+                >
+              </div>
+            </div>
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">Tina's Taxi and Delivery</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <!-- <li class="list-group-item">3002 Perry Highway</li> -->
+                <li class="list-group-item text-center">(724) 992-3360</li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <a href="https://www.tinastaxi.com/" class="card-link"
                   >Website</a
                 >
               </div>
@@ -1884,6 +1901,24 @@
               </div>
               <div class="card m-2" style="width: 18rem">
                 <div class="card-body">
+                  <h5 class="card-title text-center">
+                    Tina's Taxi and Delivery
+                  </h5>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <!-- <li class="list-group-item">3002 Perry Highway</li> -->
+                  <li class="list-group-item text-center">(724) 992-3360</li>
+                </ul>
+                <div
+                  class="card-body d-flex align-items-center justify-content-center"
+                >
+                  <a href="https://www.tinastaxi.com/" class="card-link"
+                    >Website</a
+                  >
+                </div>
+              </div>
+              <div class="card m-2" style="width: 18rem">
+                <div class="card-body">
                   <h5 class="card-title text-center">Phil's Dependable Taxi</h5>
                 </div>
                 <ul class="list-group list-group-flush">
@@ -1911,10 +1946,9 @@
         <div class="h2-header-block">
           <h2 class="display-2 text-center pt-4">Childcare</h2>
           <p class="lead text-center ch-60 pb-4">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
-            corrupti dolore et cum cupiditate, distinctio veniam impedit non.
-            Quam voluptatem nulla, et aliquid magni incidunt dolorem! Sit
-            molestiae perspiciatis quas?
+            Childcare is essential to any thriving economy. Childcare also
+            provides an opportunity for healthy social and emotional development
+            during an important phase in a child's life.
           </p>
         </div>
 
