Text changes to about page <p>, change header text on play and live pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -187,10 +187,10 @@
         Building a good life should be accessible to everybody
       </h2>
       <p class="lead text-center ch-limit mx-5 mb-4">
-        We're The Future Leaders organization - a part of the Mercer County
-        Homegrown Initiative by Penn-Northwest Co. The Future Leaders are a
-        group of young business leaders within the Mercer County area who are
-        dedicated to improving the quality of life in our region.
+        The Homegrown Initiative is a program sponsored by Penn-Northwest
+        Development Corporation's Future Leaders. The Future Leaders are a
+        volunteer organization comprised of young professionals who want to make
+        a substantial impact in their community.
       </p>
       <p class="lead text-center ch-limit mx-4">
         Our mission is to provide the necessary resources for young adults to
