--- a/pages/play.html
+++ b/pages/play.html
@@ -195,8 +195,8 @@
             Local Events
           </h2>
           <p class="card-text text-center mb-4">
-            This is the place where the description of the upcoming event goes.
-            Users can then click the button below to view the event.
+            Find the latest events hosted by the Homegrown Initiative and get
+            plugged into fun local activities!
           </p>
           <a href="https://www.eventbrite.com/" class="btn btn-primary my-3"
             >View Event</a
