--- a/pages/live.html
+++ b/pages/live.html
@@ -179,9 +179,7 @@
       </div>
 
       <div class="container">
-        <p class="lead display-6">
-          Where life is quiet and the bills are inexpensive
-        </p>
+        <p class="lead display-6">Low costs and a tight knit community</p>
       </div>
     </header>
 
