Event Added: 'Homegrown Happy Hour'

--- a/pages/play.html
+++ b/pages/play.html
@@ -186,25 +186,41 @@
       <div class="card mb-3 border shadow-lg">
         <img
           id="event-img"
-          src="../images/play/events/microphone-placeholder.png"
+          src="../images/play/events/homegrown-happy-hour-mar-2-2023.png"
           class="card-img-top"
-          alt="..."
+          alt="Homegrown Happy Hour Event: March 2nd 2023"
         />
         <div class="card-body d-flex flex-column align-items-center">
           <h2 class="card-title text-center display-6 font-family-1">
-            Local Events
+            Upcoming Event: Homegrown Happy Hour!
           </h2>
-          <p class="card-text text-center mb-4">
+          <!-- Saving the below commented-out text as placeholder for times when there are no upcoming events -->
+          <!-- <p class="card-text text-center mb-4">
             Find the latest events hosted by the Homegrown Initiative and get
             plugged into fun local activities!
+          </p> -->
+
+          <!-- Homegrown Happy Hour Event Description -->
+          <p class="card-text text-center mb-4">
+            Enjoy a fun night getting to know other local young professionals
+            and learn more about upcoming events!
           </p>
-          <a href="https://www.eventbrite.com/" class="btn btn-primary my-3"
-            >View Event</a
+          <a
+            href="https://www.eventbrite.com/e/homegrown-happy-hour-tickets-514956989217"
+            class="btn btn-primary my-3"
+            >Click to Reserve a Spot</a
           >
 
           <p class="card-text text-end">
-            <small class="text-muted">Event Registration Ends 02/14/2023</small>
+            <small class="text-muted"
+              >Thursday, March 2, 2023 from 5:00 PM - 7:30 PM EST</small
+            >
           </p>
+
+          <!-- Save below as placeholder text -->
+          <!-- <p class="card-text text-end">
+            <small class="text-muted">Event Registration Ends 02/14/2023</small>
+          </p> -->
         </div>
       </div>
     </section>
