Removed color:blue; from footer <a> tags

--- a/pages/about.html
+++ b/pages/about.html
@@ -393,7 +393,7 @@
               />
               <div class="carousel-caption d-none d-md-block">
                 <h3 class="display-6">Alex Hudson</h3>
-                <p class="">Placeholder text placeholder placeholder</p>
+                <!-- <p class="">Placeholder text placeholder placeholder</p> -->
               </div>
             </div>
             <!-- Gary -->
@@ -405,7 +405,7 @@
               />
               <div class="carousel-caption d-none d-md-block text-light">
                 <h3 class="display-6">Gary</h3>
-                <p class="">Placeholder text placeholder placeholder</p>
+                <!-- <p class="">Placeholder text placeholder placeholder</p> -->
               </div>
             </div>
 
@@ -418,9 +418,9 @@
               />
               <div class="carousel-caption d-none d-md-block text-light">
                 <h3 class="display-6">Jake Rickert</h3>
-                <p class="text-center">
+                <!-- <p class="text-center">
                   Placeholder text placeholder placeholder
-                </p>
+                </p> -->
               </div>
             </div>
 
@@ -433,9 +433,9 @@
               />
               <div class="carousel-caption d-none d-md-block text-light">
                 <h3 class="display-6">Jeff Linn</h3>
-                <p class="text-center">
+                <!-- <p class="text-center">
                   Placeholder text placeholder placeholder
-                </p>
+                </p> -->
               </div>
             </div>
 
@@ -448,9 +448,9 @@
               />
               <div class="carousel-caption d-none d-md-block text-light">
                 <h3 class="display-6">Kaylee</h3>
-                <p class="text-center">
+                <!-- <p class="text-center">
                   Placeholder text placeholder placeholder
-                </p>
+                </p> -->
               </div>
             </div>
 
@@ -463,9 +463,9 @@
               />
               <div class="carousel-caption d-none d-md-block text-dark">
                 <h3 class="display-6">Kerri Erikson</h3>
-                <p class="text-center">
+                <!-- <p class="text-center">
                   Placeholder text placeholder placeholder
-                </p>
+                </p> -->
               </div>
             </div>
 
@@ -478,9 +478,9 @@
               />
               <div class="carousel-caption d-none d-md-block text-dark">
                 <h3 class="display-6">Kolten Hoffman</h3>
-                <p class="text-center">
+                <!-- <p class="text-center">
                   Placeholder text placeholder placeholder
-                </p>
+                </p> -->
               </div>
             </div>
 
@@ -493,9 +493,9 @@
               />
               <div class="carousel-caption d-none d-md-block text-light">
                 <h3 class="display-6">Rod Wilt</h3>
-                <p class="text-center">
+                <!-- <p class="text-center">
                   Placeholder text placeholder placeholder
-                </p>
+                </p> -->
               </div>
             </div>
 
@@ -508,9 +508,9 @@
               />
               <div class="carousel-caption d-none d-md-block text-light">
                 <h3 class="display-6">Trevor Bromley</h3>
-                <p class="text-center">
+                <!-- <p class="text-center">
                   Placeholder text placeholder placeholder
-                </p>
+                </p> -->
               </div>
             </div>
           </div>
@@ -538,13 +538,13 @@
       <section
         class="container text-center section-margin-top section-margin-bottom"
       >
-        <h2 class="display-3 quicksand">
-          Placeholder goodbye header thanks for visiting!
+        <h2 class="display-3 quicksand pb-5">
+          We hope you've enjoyed your stay!
         </h2>
-        <p class="lead mb-5">
+        <!-- <p class="lead mb-5">
           Placeholder placeholder placeholder placeholder consectetur
           adipisicing elit. Nam delectus illo tempora aspernatur!
-        </p>
+        </p> -->
         <h3 class="display-6 quicksand">
           Want to connect and join the Future Leaders of Mercer County?
         </h3>
@@ -571,7 +571,7 @@
         </h2>
 
         <!-- Facebook -->
-        <a class="mx-3" href="https://www.facebook.com/pndchomegrown/">
+        <a class="mx-3 no-blue" href="https://www.facebook.com/pndchomegrown/">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="30"
@@ -587,7 +587,7 @@
         </a>
 
         <!-- Instagram -->
-        <a class="mx-3" href="https://www.instagram.com/pndchomegrown/">
+        <a class="mx-3 no-blue" href="https://www.instagram.com/pndchomegrown/">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="30"
@@ -604,7 +604,7 @@
 
         <!-- Twitter -->
         <a
-          class="mx-3"
+          class="mx-3 no-blue"
           href="https://twitter.com/PennNorthwest?s=20&t=R9mD3b1u0BGIDMznRaKfcA"
         >
           <svg
@@ -623,7 +623,7 @@
 
         <!-- LinkedIn -->
         <a
-          class="mx-3"
+          class="mx-3 no-blue"
           href="https://www.linkedin.com/company/penn-northwest-development-corporation/"
         >
           <svg
@@ -639,7 +639,7 @@
             />
           </svg>
         </a>
-        <a class="mx-3" href="https://youtu.be/gRIJu4ZKv4w">
+        <a class="mx-3 no-blue" href="https://youtu.be/gRIJu4ZKv4w">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="30"
