--- a/pages/live.html
+++ b/pages/live.html
@@ -2565,7 +2565,7 @@
         </h2>
 
         <!-- Facebook -->
-        <a class="mx-3" href="https://www.facebook.com/pndchomegrown/">
+        <a class="mx-3 no-color" href="https://www.facebook.com/pndchomegrown/">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="30"
@@ -2581,7 +2581,10 @@
         </a>
 
         <!-- Instagram -->
-        <a class="mx-3" href="https://www.instagram.com/pndchomegrown/">
+        <a
+          class="mx-3 no-color"
+          href="https://www.instagram.com/pndchomegrown/"
+        >
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="30"
@@ -2598,7 +2601,7 @@
 
         <!-- Twitter -->
         <a
-          class="mx-3"
+          class="mx-3 no-color"
           href="https://twitter.com/PennNorthwest?s=20&t=R9mD3b1u0BGIDMznRaKfcA"
         >
           <svg
@@ -2617,7 +2620,7 @@
 
         <!-- LinkedIn -->
         <a
-          class="mx-3"
+          class="mx-3 no-color"
           href="https://www.linkedin.com/company/penn-northwest-development-corporation/"
         >
           <svg
@@ -2633,7 +2636,7 @@
             />
           </svg>
         </a>
-        <a class="mx-3" href="https://youtu.be/gRIJu4ZKv4w">
+        <a class="mx-3 no-color" href="https://youtu.be/gRIJu4ZKv4w">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="30"
