--- a/pages/learn.html
+++ b/pages/learn.html
@@ -591,7 +591,7 @@
         </h2>
 
         <!-- Facebook -->
-        <a class="mx-3" href="https://www.facebook.com/pndchomegrown/">
+        <a class="mx-3 no-color" href="https://www.facebook.com/pndchomegrown/">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="30"
@@ -607,7 +607,10 @@
         </a>
 
         <!-- Instagram -->
-        <a class="mx-3" href="https://www.instagram.com/pndchomegrown/">
+        <a
+          class="mx-3 no-color"
+          href="https://www.instagram.com/pndchomegrown/"
+        >
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="30"
@@ -624,7 +627,7 @@
 
         <!-- Twitter -->
         <a
-          class="mx-3"
+          class="mx-3 no-color"
           href="https://twitter.com/PennNorthwest?s=20&t=R9mD3b1u0BGIDMznRaKfcA"
         >
           <svg
@@ -643,7 +646,7 @@
 
         <!-- LinkedIn -->
         <a
-          class="mx-3"
+          class="mx-3 no-color"
           href="https://www.linkedin.com/company/penn-northwest-development-corporation/"
         >
           <svg
@@ -659,7 +662,7 @@
             />
           </svg>
         </a>
-        <a class="mx-3" href="https://youtu.be/gRIJu4ZKv4w">
+        <a class="mx-3 no-color" href="https://youtu.be/gRIJu4ZKv4w">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="30"
