--- a/pages/play.html
+++ b/pages/play.html
@@ -444,7 +444,7 @@
         </h2>
 
         <!-- Facebook -->
-        <a class="mx-3" href="https://www.facebook.com/pndchomegrown/">
+        <a class="mx-3 no-color" href="https://www.facebook.com/pndchomegrown/">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="30"
@@ -460,7 +460,10 @@
         </a>
 
         <!-- Instagram -->
-        <a class="mx-3" href="https://www.instagram.com/pndchomegrown/">
+        <a
+          class="mx-3 no-color"
+          href="https://www.instagram.com/pndchomegrown/"
+        >
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="30"
@@ -477,7 +480,7 @@
 
         <!-- Twitter -->
         <a
-          class="mx-3"
+          class="mx-3 no-color"
           href="https://twitter.com/PennNorthwest?s=20&t=R9mD3b1u0BGIDMznRaKfcA"
         >
           <svg
@@ -496,7 +499,7 @@
 
         <!-- LinkedIn -->
         <a
-          class="mx-3"
+          class="mx-3 no-color"
           href="https://www.linkedin.com/company/penn-northwest-development-corporation/"
         >
           <svg
@@ -512,7 +515,7 @@
             />
           </svg>
         </a>
-        <a class="mx-3" href="https://youtu.be/gRIJu4ZKv4w">
+        <a class="mx-3 no-color" href="https://youtu.be/gRIJu4ZKv4w">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="30"
