--- a/pages/play.html
+++ b/pages/play.html
@@ -213,7 +213,7 @@
 
           <p class="card-text text-end">
             <small class="text-muted"
-              >Thursday, March 2, 2023 from 5:00 PM - 7:30 PM EST</small
+              >Thu, March 2, 2023 from 5:00 PM - 7:30 PM EST</small
             >
           </p>
 
@@ -229,6 +229,15 @@
     <main>
       <!-- BUHL PARK -->
       <section class="container-fluid row mx-0 px-0 pt-5">
+        <aside
+          class="col-md-6 text-center d-flex d-md-none flex-column align-items-center justify-content-center px-0 shadow-lg"
+        >
+          <img
+            src="../images/buhl_rose_garden.png"
+            alt=""
+            class="img-fluid section-images"
+          />
+        </aside>
         <article
           class="col-md-6 text-center d-flex flex-column align-items-center justify-content-center"
         >
@@ -246,7 +255,7 @@
           </p>
         </article>
         <aside
-          class="col-md-6 text-center d-flex flex-column align-items-center justify-content-center px-0 shadow-lg"
+          class="col-md-6 text-center d-none d-md-flex flex-column align-items-center justify-content-center px-0 shadow-lg"
         >
           <img
             src="../images/buhl_rose_garden.png"
