Removed unnecessary comments

--- a/index.html
+++ b/index.html
@@ -143,9 +143,6 @@
             <li class="nav-item">
               <a class="nav-link" href="./pages/learn.html">Learn</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="./pages/play.html">Play</a>
-            </li> -->
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -263,8 +260,7 @@
             id="amenities-content-mobile"
             class="deskewed-box-amenities-section"
           >
-            <!-- Move the below div's position a
-              round to shift diagonal page content -->
+            <!-- Move the below div's position around to shift diagonal page content -->
             <!-- XL -->
 
             <div class="container">
