--- a/pages/about.html
+++ b/pages/about.html
@@ -320,6 +320,7 @@
           class="carousel carousel-dark slide"
           data-bs-ride="carousel"
         >
+          <!-- THESE ARE THE (current picture #) INDICATORS. Save for potential future use. -->
           <!-- <div class="carousel-indicators">
             <button
               type="button"
@@ -383,6 +384,8 @@
           <!--  -->
           <!--  -->
           <!-------------------------------------- OUR MEMBERS -------------------------------------->
+
+          <!-- SAVE ALL <p> PLACEHOLDER TEXT. It will be added back in when copy becomes available from client. -->
           <div class="carousel-inner">
             <!-- Alex Hudson -->
             <div class="carousel-item active" data-bs-interval="5000">
@@ -401,15 +404,15 @@
               <img
                 src="../images/about/team/gary.jpg"
                 class="d-block w-50 img-fluid rounded mx-auto border border-warning"
-                alt="A picture of Gary"
+                alt="A picture of Gary Dovey"
               />
               <div class="carousel-caption d-none d-md-block text-light">
-                <h3 class="display-6">Gary</h3>
+                <h3 class="display-6">Gary Dovey</h3>
                 <!-- <p class="">Placeholder text placeholder placeholder</p> -->
               </div>
             </div>
 
-            <!-- Jake Rickert -->
+            <!-- Jake Rickert (Award Winning Alcoholic) -->
             <div class="carousel-item" data-bs-interval="5000">
               <img
                 src="../images/about/team/jake.png"
@@ -541,6 +544,7 @@
         <h2 class="display-3 quicksand pb-5">
           We hope you've enjoyed your stay!
         </h2>
+        <!-- Save this below placeholder as it may be added back in later -->
         <!-- <p class="lead mb-5">
           Placeholder placeholder placeholder placeholder consectetur
           adipisicing elit. Nam delectus illo tempora aspernatur!
@@ -657,18 +661,17 @@
         <!-- <div class="container text-center"><p>Test</p></div> -->
       </div>
     </footer>
+
+    <!-- Thanks so much for visiting the code base of this project! -->
+    <!-- This has been my first ever project as a freelance dev (and a dev, as such) and so represents many years of self-taught work. -->
+    <!-- For those reading this in the future, best wishes, and may you have a good, prosperous life - full of love and joy <3 -->
+    <!-- And if you're in search of a dev and would like to work together, reach out at the link below. -->
+
     <div id="dev-signature-div" class="shadow-lg">
-      <!-- <p class="lead d-none d-sm-block">
-        Website Design by:
-        <a class="text-light" href="https://joevilasi.com/"
-          >Joe Vilasi | Vilasi Web Consulting</a
-        >
-      </p> -->
       <p class="">Website Design by:</p>
       <a class="text-light lead" href="https://joevilasi.com/"
         >Joe Vilasi | Vilasi Web Consulting</a
       >
-      <!-- <p class="lead">Test</p> -->
     </div>
 
     <!-- Bootstrap js Bundle -->
