--- a/pages/learn.html
+++ b/pages/learn.html
@@ -136,9 +136,7 @@
                 >Learn</a
               >
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="./play.html">Play</a>
-            </li> -->
+
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -475,7 +473,7 @@
       </section>
       <hr class="d-none d-lg-block" />
 
-      <!-- KEEP THE BELOW -->
+      <!-- KEEP THE BELOW - CLIENT MAY WANT IN THE FUTURE -->
       <!-- ------------------------------------------ MCCC -------------------------------------------->
       <!-- <section class="d-none d-lg-flex section-margin-top">
         <aside>
