Spelling and other small changes - margin/padding, contact info, card spacing/consistency

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 night life, Mercer County has it all. Take a stroll through Buhl
                 Park, explore nearly 20 state game lands, enjoy the eclectic
                 restaurant scene, or spend time in the bustling downtown of
-                Sharon or Grove City. Resident also take advantage of the
+                Sharon or Grove City. Residents also take advantage of the
                 convenient 1-hour drive to Cleveland, Erie, and Pittsburgh.
               </p>
               <div class="amenities-scrollIn scrollIn">
