--- a/pages/about.html
+++ b/pages/about.html
@@ -450,7 +450,7 @@
                 alt="A picture of Kaylee"
               />
               <div class="carousel-caption d-none d-md-block text-light">
-                <h3 class="display-6">Kaylee</h3>
+                <h3 class="display-6">Kaylee Bender</h3>
                 <!-- <p class="text-center">
                   Placeholder text placeholder placeholder
                 </p> -->
