--- a/pages/play.html
+++ b/pages/play.html
@@ -284,13 +284,13 @@
           <p class="lead pb-4">
             Grove City Premium Outlets is western Pennsylvania's premiere
             shopping destination with over 120 of the hottest brand name stores
-            including kate spade new york, Coach, Michael Kors, The North Face,
+            including Kate Spade New York, Coach, Michael Kors, The North Face,
             Under Armour, Vera Bradley and J. Crew Factory Store. The open air
             center is easily accessible located just off I-79, 3 miles south of
-            I-80 serving Pittsburgh, Youngstown and Erie. Shoppers realize
-            25-65% savings off everyday retail and visitors to the area enjoy
-            the savings offered by Pennsylvania's tax-free status on most
-            clothing and shoes.
+            I-80 serving Pittsburgh, Youngstown, Erie, Cleveland, and Mercer
+            County. Shoppers realize 25-65% savings off everyday retail and
+            visitors to the area enjoy the savings offered by Pennsylvania's
+            tax-free status on most clothing and shoes.
           </p>
         </article>
       </section>
@@ -319,7 +319,8 @@
             or wildlife viewing. Fishing enthusiasts can test the waters for
             bass, walleye, and a variety of panfish that inhabit the lake.
             Boating is another popular activity, from water-skiing behind a
-            powerboat to canoeing.
+            powerboat to canoeing. The header image at the top of this page is
+            from Shenango Lake.
           </p>
         </article>
         <aside
@@ -362,7 +363,7 @@
           </h3>
           <p class="lead pb-4">
             Ever since the Scottish invented the game and first set foot on the
-            American continent - Western Pennsylvania has been well regarded as
+            American continent, Western Pennsylvania has been well regarded as
             one of the most idyllic locations for the game of Golf in the world.
             From the nationally ranked Avalon Golf and County Club to the
             free-to-play DumDums Course - from beginner to professional - Mercer
