Fixed Kerri Erikson -> Kerri Ericksen

--- a/pages/about.html
+++ b/pages/about.html
@@ -465,7 +465,7 @@
                 alt="A picture of Kerri Erikson"
               />
               <div class="carousel-caption d-none d-md-block text-dark">
-                <h3 class="display-6">Kerri Erikson</h3>
+                <h3 class="display-6">Kerri Ericksen</h3>
                 <!-- <p class="text-center">
                   Placeholder text placeholder placeholder
                 </p> -->
