Added group photo to bottom of about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -538,17 +538,23 @@
         </div>
       </section>
 
+      <hr class="section-margin-top" />
       <section
         class="container text-center section-margin-top section-margin-bottom"
       >
-        <h2 class="display-3 quicksand pb-5">
+        <img
+          src="../images/about/team/group-shot-1.jpeg"
+          alt="The Future Leader Team Group Photo"
+          class="img-fluid border border-primary shadow rounded mb-4"
+        />
+        <h2 class="display-3 quicksand pb-2">
           We hope you've enjoyed your stay!
         </h2>
         <!-- Save this below placeholder as it may be added back in later -->
         <!-- <p class="lead mb-5">
-          Placeholder placeholder placeholder placeholder consectetur
-          adipisicing elit. Nam delectus illo tempora aspernatur!
-        </p> -->
+        Placeholder placeholder placeholder placeholder consectetur
+        adipisicing elit. Nam delectus illo tempora aspernatur!
+      </p> -->
         <h3 class="display-6 quicksand">
           Want to connect and join the Future Leaders of Mercer County?
         </h3>
