Added Google Analytics <script> tags to all HTML pages. Placed just before </head>

--- a/index.html
+++ b/index.html
@@ -69,6 +69,20 @@
     <link href="https://css.gg/css" rel="stylesheet" />
     <link href="https://css.gg/arrow-down.css" rel="stylesheet" />
     <link href="https://css.gg/arrow-right.css" rel="stylesheet" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-226174846-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-226174846-1');
+    </script>
   </head>
   <body class="bg-light">
     <!------------------------------------------------------ START NAV ------------------------------------------------------>
