--- a/pages/about.html
+++ b/pages/about.html
@@ -59,6 +59,20 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../css/styles/about.css" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-226174846-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-226174846-1');
+    </script>
   </head>
   <body>
     <!----------------------------- START NAV ----------------------------->
@@ -676,7 +690,7 @@
     <div id="dev-signature-div" class="shadow-lg">
       <p class="">Website Design by:</p>
       <a class="text-light lead" href="https://joevilasi.com/"
-        >Joe Vilasi | Vilasi Web Consulting</a
+        >Vilasi Web Consulting LLC</a
       >
     </div>
 
