--- a/pages/live.html
+++ b/pages/live.html
@@ -58,6 +58,20 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/styles/live.css" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-226174846-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-226174846-1');
+    </script>
   </head>
 
   <body>
