--- a/pages/work.html
+++ b/pages/work.html
@@ -62,6 +62,20 @@
 
     <!-- Icons CSS.gg -->
     <link href="https://css.gg/facebook.css" rel="stylesheet" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-226174846-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-226174846-1');
+    </script>
   </head>
   <body>
     <!-- START NAV -->
