Correct <section> content overlap on short screens. Remove unnecessary comments.

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
       </section>
 
       <!-- Windy Road Parallax Divider -->
-      <section class="container-fluid px-0"></section>
+      <section id="windy-road" class="container-fluid px-0"></section>
 
       <!-------------------------------- Footer -------------------------------->
       <footer class="container-fluid px-0">
