Updated Event. Updated styles on Play page and About page css + class names.

--- a/pages/play.html
+++ b/pages/play.html
@@ -197,16 +197,17 @@
 
     <!------------------------ EVENTS ------------------------>
     <section id="events" class="section-margin container pt-5">
+      <!--! Event 1 ---------------------------------------------------------------------------------------->
       <div class="card mb-3 border shadow-lg">
         <img
           id="event-img"
-          src="../images/play/events/homegrown-happy-hour-mar-2-2023.png"
+          src="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F446953189%2F1010584485983%2F1%2Foriginal.20230215-162936?w=940&auto=format%2Ccompress&q=75&sharp=10&rect=274%2C3666%2C3668%2C1834&s=5185e3fcd16d390a19f81e475ff757b9"
           class="card-img-top"
           alt="Homegrown Happy Hour Event: March 2nd 2023"
         />
         <div class="card-body d-flex flex-column align-items-center">
           <h2 class="card-title text-center display-6 font-family-1">
-            Upcoming Event: Homegrown Happy Hour!
+            Upcoming Event: Homegrown Happy Hour Networking Event!
           </h2>
           <!-- Saving the below commented-out text as placeholder for times when there are no upcoming events -->
           <!-- <p class="card-text text-center mb-4">
@@ -215,19 +216,34 @@
           </p> -->
 
           <!-- Homegrown Happy Hour Event Description -->
-          <p class="card-text text-center mb-4">
-            Enjoy a fun night getting to know other local young professionals
-            and learn more about upcoming events!
+          <p class="card-text text-center mb-4 max-text-width">
+            Come meet the group who are changing the narrative in the valley!
+            Homegrown Initiative is focused on changing the narrative in Mercer
+            County through the four quadrants of Live, Learn, Work, and Play.
+            Come meet our Future Leaders committee members, mix and mingle with
+            other local young professionals and business owners, and find out
+            more about how you can get involved with Homegrown Initiative!
+          </p>
+          <p class="card-text text-center mb-4 max-text-width">
+            Enjoy free appetizers and a free drink. Get a free professional
+            headshot taken, bring your business cards for our Business Card
+            Raffle, and be the first in the valley to find out about our
+            Incredible 2024 Events Calendar!
+          </p>
+          <p class="card-text text-center mb-4 max-text-width">
+            We look forward to seeing you at our Free Happy Hour Event!! See you
+            all there, cheers!!
           </p>
           <a
-            href="https://www.eventbrite.com/e/homegrown-happy-hour-tickets-514956989217"
+            href="https://www.eventbrite.com/e/homegrowns-happy-hour-networking-event-tickets-788414708617?aff=erelexpmlt"
             class="btn btn-primary my-3"
+            target="_blank"
             >Click to Reserve a Spot</a
           >
 
           <p class="card-text text-end">
             <small class="text-muted"
-              >Thu, March 2, 2023 from 5:00 PM - 7:30 PM EST</small
+              >Thursday, February 1 · 5:30 - 7:30pm EST</small
             >
           </p>
 
