Added Past Events Carousel

--- a/pages/play.html
+++ b/pages/play.html
@@ -207,7 +207,9 @@
         />
         <div class="card-body d-flex flex-column align-items-center">
           <h2 class="card-title text-center display-6 font-family-1">
-            Upcoming Event: Homegrown Happy Hour Networking Event!
+            <strong
+              >Upcoming Event: Homegrown Happy Hour Networking Event!</strong
+            >
           </h2>
           <!-- Saving the below commented-out text as placeholder for times when there are no upcoming events -->
           <!-- <p class="card-text text-center mb-4">
@@ -255,6 +257,47 @@
       </div>
     </section>
     <!------------------------ END EVENTS ------------------------>
+    <!--* Begin Past Events Slideshow  ------------------------------------------------------------->
+
+    <hr />
+
+    <section class="container d-flex flex-column align-items-center my-5">
+      <h2 class="display-4 text-center mb-3">Scenes from Past Events</h2>
+
+      <div
+        id="carouselExampleSlidesOnly"
+        class="carousel slide w-50 shadow-lg"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active border border-0 text-center">
+            <img
+              src="../images/play/past-events/1.png"
+              class="img-fluid d-block w-100 rounded"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item border border-0">
+            <img
+              src="../images/play/past-events/2.png"
+              class="d-block w-100 rounded"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item border border-0">
+            <img
+              src="../images/play/past-events/3.png"
+              class="d-block w-100 rounded"
+              alt="..."
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <hr />
+
+    <!--* End Past Events Slideshow  ------------------------------------------------------------->
 
     <main>
       <!-- BUHL PARK -->
