Update picture registry

--- a/pages/play.html
+++ b/pages/play.html
@@ -291,6 +291,41 @@
               alt="..."
             />
           </div>
+          <div class="carousel-item border border-0">
+            <img
+              src="../images/play/past-events/4.png"
+              class="d-block w-100 rounded"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item border border-0">
+            <img
+              src="../images/play/past-events/5.png"
+              class="d-block w-100 rounded"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item border border-0">
+            <img
+              src="../images/play/past-events/6.png"
+              class="d-block w-100 rounded"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item border border-0">
+            <img
+              src="../images/play/past-events/7.png"
+              class="d-block w-100 rounded"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item border border-0">
+            <img
+              src="../images/play/past-events/8.png"
+              class="d-block w-100 rounded"
+              alt="..."
+            />
+          </div>
         </div>
       </div>
     </section>
