Added first podcast episode

--- a/pages/podcast.html
+++ b/pages/podcast.html
@@ -193,7 +193,7 @@
 
       <div class="container">
         <p class="lead display-6">
-          Discover Local Gems: Inspiring Conversations with Local Business
+          Playbooks to Professions: Inspiring Conversations with Local Business
           Leaders, Community Figures, and Rising Sports Talents
         </p>
       </div>
@@ -218,13 +218,13 @@
             <iframe
               width="460"
               height="315"
-              src="https://www.youtube.com/embed/ScMzIvxBSi4?si=KNjq39vLLRA1PcXA"
+              src="https://www.youtube.com/embed/Zhk3Obqtyb0?si=gmwvwOj6UdB8myJk"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen
             ></iframe>
-            <p>Episode 1</p>
+            <p>Episode 1 - Lou Brown</p>
           </div>
 
           <!--? Phone Screens -->
@@ -232,106 +232,13 @@
             <iframe
               width="340"
               height="280"
-              src="https://www.youtube.com/embed/ScMzIvxBSi4?si=KNjq39vLLRA1PcXA"
+              src="https://www.youtube.com/embed/Zhk3Obqtyb0?si=gmwvwOj6UdB8myJk"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen
             ></iframe>
-            <p>Episode 1</p>
-          </div>
-        </div>
-
-        <!--* Episode 2 -------------------------------------------->
-        <div>
-          <!--? Default Screen Size -->
-          <div class="mx-3 mb-5 d-none d-sm-block">
-            <iframe
-              width="460"
-              height="315"
-              src="https://www.youtube.com/embed/ScMzIvxBSi4?si=KNjq39vLLRA1PcXA"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-            <p>Episode 2</p>
-          </div>
-
-          <!--? Phone Screens -->
-          <div class="mx-3 mb-5 d-sm-none">
-            <iframe
-              width="340"
-              height="280"
-              src="https://www.youtube.com/embed/ScMzIvxBSi4?si=KNjq39vLLRA1PcXA"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-            <p>Episode 2</p>
-          </div>
-        </div>
-
-        <!--* Episode 3 -------------------------------------------->
-        <div>
-          <!--? Default Screen Size -->
-          <div class="mx-3 mb-5 d-none d-sm-block">
-            <iframe
-              width="460"
-              height="315"
-              src="https://www.youtube.com/embed/ScMzIvxBSi4?si=KNjq39vLLRA1PcXA"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-            <p>Episode 3</p>
-          </div>
-
-          <!--? Phone Screens -->
-          <div class="mx-3 mb-5 d-sm-none">
-            <iframe
-              width="340"
-              height="280"
-              src="https://www.youtube.com/embed/ScMzIvxBSi4?si=KNjq39vLLRA1PcXA"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-            <p>Episode 3</p>
-          </div>
-        </div>
-
-        <!--* Episode 4 -------------------------------------------->
-        <div>
-          <!--? Default Screen Size -->
-          <div class="mx-3 mb-5 d-none d-sm-block">
-            <iframe
-              width="460"
-              height="315"
-              src="https://www.youtube.com/embed/ScMzIvxBSi4?si=KNjq39vLLRA1PcXA"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-            <p>Episode 4</p>
-          </div>
-
-          <!--? Phone Screens -->
-          <div class="mx-3 mb-5 d-sm-none">
-            <iframe
-              width="340"
-              height="280"
-              src="https://www.youtube.com/embed/ScMzIvxBSi4?si=KNjq39vLLRA1PcXA"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-            <p>Episode 4</p>
+            <p>Episode 1 - Lou Brown</p>
           </div>
         </div>
       </section>
